--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "package-mac": "npm run build && electron-builder --mac"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.57.2",
+    "cmdk": "^1.1.1",
     "openai": "^5.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -30,7 +32,7 @@
     "babel-loader": "^9.1.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^12.0.2",
     "crypto-browserify": "^3.12.1",
@@ -48,7 +50,7 @@
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
