--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-notes-app",
+  "name": "fira-ai",
   "version": "1.0.0",
   "description": "A minimal AI-powered notes app for macOS",
   "main": "electron/main.js",
@@ -20,6 +20,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.57.2",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.2",
     "openai": "^5.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -62,7 +63,7 @@
   },
   "build": {
     "appId": "com.ainotesapp.mac",
-    "productName": "AI Notes",
+    "productName": "Fira AI",
     "directories": {
       "output": "release"
     },
